hphp/test/slow/no_php/require.php.expectf

Fatal error: HHVM 4+ does not support PHP: %s/test/slow/no_php/toplevel.php in %s/test/slow/no_php/require.php on line 3
